--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,8 @@ body {
 }
 
 main {
-  max-width: 1300px;
-  min-height: 550px;
+  max-width: 1250px;
+  min-height: 650px;
   margin: 160px auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -74,6 +74,9 @@ main .item:nth-child(1) {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-image: url(/images/bg-pattern-quotation.svg);
+  background-repeat: no-repeat;
+  background-position: 80% 0%;
 }
 main .item:nth-child(1) .profile {
   display: flex;
@@ -125,11 +128,40 @@ main .item:nth-child(5) {
   grid-row-start: 1;
   grid-row-end: 3;
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: hsl(219, 29%, 14%);
+  background-color: white;
+  gap: 2rem;
+  box-shadow: 0px 5px 17px 3px rgba(0, 0, 0, 0.66);
+}
+main .item:nth-child(5) .profile {
+  display: flex;
+}
+main .item:nth-child(5) .profile .profile-name .verified {
+  opacity: 0.5;
+}
+main .item:nth-child(5) p.testimonial {
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 1.2;
+}
+main .item:nth-child(5) p.gratitude {
+  opacity: 0.5;
+}
+main .item:nth-child(5) img {
+  border-radius: 50%;
+  margin-right: 1rem;
+  border: 3px solid gray;
 }
 main .item:nth-child(4) {
   grid-column: 2/4;
   background-color: hsl(219, 29%, 14%);
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 main .item:nth-child(4) .profile {
   display: flex;
@@ -149,6 +181,39 @@ main .item:nth-child(4) img {
   border-radius: 50%;
   margin-right: 1rem;
   border: 3px solid gray;
+}
+main .item:nth-child(3) {
+  background-color: white;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: 2rem;
+  color: black;
+  box-shadow: 0px 5px 17px 3px rgba(0, 0, 0, 0.66);
+}
+main .item:nth-child(3) .profile {
+  display: flex;
+}
+main .item:nth-child(3) .profile .profile-name .verified {
+  opacity: 0.5;
+}
+main .item:nth-child(3) p.testimonial {
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 1.2;
+}
+main .item:nth-child(3) p.gratitude {
+  opacity: 0.5;
+}
+main .item:nth-child(3) img {
+  border-radius: 50%;
+  margin-right: 1rem;
+  border: 3px solid gray;
+}
+
+footer {
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
