--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,8 +7,8 @@ body {
 }
 
 main {
-    max-width: 1300px;
-    min-height: 550px;
+    max-width: 1250px;
+    min-height: 650px;
     margin:160px auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -27,6 +27,9 @@ main {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        background-image: url(/images/bg-pattern-quotation.svg);
+        background-repeat: no-repeat;
+        background-position: 80% 0%;
         
         .profile {
             display: flex;
@@ -89,12 +92,47 @@ main {
         grid-row-start: 1;
         grid-row-end:3;
         padding: 2rem;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        color: $very-dark-blackish-blue;
+        background-color: white;
+        gap: 2rem;
+        box-shadow: 0px 5px 17px 3px rgba(0, 0, 0, 0.66);
+
+        .profile {
+                display: flex;
+        
+                .profile-name .verified {
+                    opacity: 0.5;
+                }
+            }
+        
+            p.testimonial {
+                font-size: 22px;
+                font-weight: bold;
+                line-height: 1.2;
+            }
+        
+            p.gratitude {
+                opacity: 0.5;
+            }
+        
+            img {
+                border-radius: 50%;
+                margin-right: 1rem;
+                border: 3px solid gray;
+            }
     }
     
     .item:nth-child(4) {
         grid-column: 2 / 4;
         background-color: $very-dark-blackish-blue;
         padding: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
 
         .profile {
                 display: flex;
@@ -121,5 +159,44 @@ main {
             }
     }
 
+        .item:nth-child(3) {
+            background-color: white;
+            padding: 2rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            gap: 2rem;
+            color: black;
+            box-shadow: 0px 5px 17px 3px rgba(0, 0, 0, 0.66);
+    
+            .profile {
+                display: flex;
+    
+                .profile-name .verified {
+                    opacity: 0.5;
+                }
+            }
+    
+            p.testimonial {
+                font-size: 22px;
+                font-weight: bold;
+                line-height: 1.2;
+            }
+    
+            p.gratitude {
+                opacity: 0.5;
+            }
+    
+            img {
+                border-radius: 50%;
+                margin-right: 1rem;
+                border: 3px solid gray;
+            }
+        }
 }
 
+footer {
+    text-align: center;
+}
+
+@import '_mobile';
